[package]
name = "Shebel_RU_4_01"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.7.0"
ndarray = "0.15.4"
nalgebra = "0.32"

[profile.release]
codegen-units = 1
lto = "thin"

# CPU-specific flags for all builds
[target.'cfg(all())']
rustflags = ["-C", "target-cpu=native", "-C", "target-feature=+avx2,+fma"]